deployment_nginx_1_14_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kube-test-ns
  labels: 
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-kuber
        image: nginx:1.14.2
        ports:
        - containerPort: 80
